--- a/limengyong/zoumadeng.html
+++ b/limengyong/zoumadeng.html
@@ -22,7 +22,7 @@
                 height: 300px;
                 margin: 50px auto;
                 position: relative;
-                /* overflow: hidden; */
+                overflow: hidden;
             }
 
             .content a {
@@ -95,24 +95,26 @@
 
     <body>
         <div id="box" v-cloak>
-            <el-carousel>
-                <el-carousel-item v-for="i in 4" :key="i" :style="{zIndex:'-'+i}" ref="man">
+            <el-carousel :autoplay="false" :initial-index="2">
+                <el-carousel-item v-for="i in 4" :key="i">
                     <h3>{{i}}</h3>
                 </el-carousel-item>
             </el-carousel>
         </div>
         <template id="carousel">
             <div class="content">
-                <a href="javascript:;" id="pre" @click="pre">&lt;</a>
-                <a href="javascript:;" id="next" @click="next">&gt;</a>
-                <slot></slot>
-                <ul class="list">
-                    <li v-for="i in 4"></li>
-                </ul>
+                <div class="carousel-container">
+                    <a href="javascript:;" id="pre" @click="pre">&lt;</a>
+                    <a href="javascript:;" id="next" @click="next">&gt;</a>
+                    <slot></slot>
+                    <ul class="list">
+                        <li v-for="i in 4"></li>
+                    </ul>
+                </div>
             </div>
         </template>
         <template id="carouselitem">
-            <div class="el-carousel__item">
+            <div class="el-carousel__item" :class="{'is-animating':animating}" :style="itemstyle">
                 <slot></slot>
             </div>
         </template>
@@ -121,50 +123,73 @@
     <script>
         Vue.component('el-carousel', {
             template: '#carousel',
-            props: ['num'],
+            props: ['initial-index', 'autoplay'],
             data() {
                 return {
-                    n: 0
+                    n: this.initalIndex || 0,
+                    dirctive: 'r'
+                }
+            },
+            mounted() {
+                this.$children[this.n].left = '0px'
+                this.$children[this.n - 1 < 0 ? 3 : this.n].left = '-400px'
+                if (this.autoplay) {
+                    setInterval(() => {
+                        this.next()
+                    }, 2000)
+                }
+            },
+            watch: {
+                n(newval, oldval) {
+                    this.$children.forEach(element => {
+                        element.animating = false
+                    });
+                    this.dirctive == 'r' ? this.$children[newval + 1 > 3 ? 0 : newval + 1].left = '400px' : this
+                        .$children[newval - 1 < 0 ? 3 : newval - 1].left = '-400px'
+                    this.$children[oldval].animating = true;
+                    this.$children[newval].animating = true;
+                    this.$children[oldval].left = this.dirctive == 'r' ? '-400px' : '400px'
+                    this.$children[newval].left = '0px'
+
+                    this.$emit('change', newval)
                 }
             },
             methods: {
                 next() {
+                    this.dirctive = 'r'
+                    this.n >= 3 ? this.n = 0 : this.n++;
 
-                    // console.log(this.n++)
-                    var show = this.$root.$refs.man[this.n].$el;
-                    if (this.n > 4) {
-                        this.n = 0
-                        // show.style.left = this.n * -400 + 'px'
-                    } else {
-                        this.n++;
-                        // show.style.left = this.n * -400 + 'px'
-                    }
-                    // this.n++;
-                    show.style.left = -400 + 'px'
+
+
+
+
                 },
                 pre() {
-                    console.log(this.$root.$refs.man)
-                    var show = this.$root.$refs.man[this.n].$el;
-                    if (this.n == 0) {
-                        this.n = 4
-                    } else {
-                        this.n--
-                    }
-                    // if (this.n < 0) {
-                    //     this.n = 4;
+                    this.dirctive = 'l'
+                    this.n <= 0 ? this.n = 3 : this.n--;
 
-                    // } else {
-                    //     this.n--;
-                    // }
-                    show.style.left = 400 + 'px'
+
                 }
             },
-            mounted() {
 
-            }
         })
         Vue.component('el-carousel-item', {
-            template: '#carouselitem'
+            template: '#carouselitem',
+            data() {
+                return {
+                    left: '400px',
+                    animating: false
+                }
+
+            },
+            computed: {
+                itemstyle() {
+                    return {
+                        transform: 'translateX(' + this.left + ') scale(1)'
+                    }
+                }
+            }
+
         })
         new Vue().$mount('#box')
     </script>
