--- a/陈和乡/6.18/index.html
+++ b/陈和乡/6.18/index.html
@@ -26,7 +26,7 @@
             height: 60px;
             display: block;
             text-decoration: none;
-            color: #fff;
+            color: #ccc;
             position: absolute;
             top: 50%;
             margin-top: -30px;
