--- a/limengyong/fenyezujian.html
+++ b/limengyong/fenyezujian.html
@@ -165,6 +165,7 @@
                         this.n = 1;
                     } else {
                         this.n--
+                        this.shuNum = this.n
                     }
                 },
                 next() {
@@ -172,6 +173,7 @@
                         this.n = this.page;
                     } else {
                         this.n++
+                        this.shuNum = this.n
                     }
                 },
                 change() {
